--- a/style.css
+++ b/style.css
@@ -49,7 +49,6 @@ body {
 }
 
     .outerContainer {
-width:27.5rem;
 display:flex;
 flex-direction:row;
 filter: drop-shadow(0px 0px 1.5rem rgb(0,0,0,0.10));
@@ -103,8 +102,8 @@ filter: drop-shadow(0px 0px 1.5rem rgb(0,0,0,0.10));
     flex-direction:column;
     justify-content: center;
     align-items: center;
-    width:15rem;
-    min-width:15rem;
+    width:12rem;
+    min-width:12rem;
     height:25rem;
     z-index:100;
 }
@@ -211,6 +210,7 @@ width:10rem;
 margin:0.35rem;
 font-size:1.5rem;
 border-radius:0.31rem;
-box-shadow: 0.2rem 0.1rem 0.3rem 0rem rgba(0, 0, 0, 0.3);
+padding:0.4rem 0.2rem 0.4rem 0.2rem;
+box-shadow: 0.05rem 0.05rem 0.1rem 0rem rgba(0, 0, 0, 0.2);
 }
 
