--- a/style.css
+++ b/style.css
@@ -24,8 +24,8 @@
     --wed-prim: white;
     --wed-sec: #ffe9ce;
     --wed-tri: #fff2e2;
-    --wed-fontcl1: #252525;;
-    --wed-fontcl2: #1e1e1e;;
+    --wed-fontcl1: #252525;
+    --wed-fontcl2: #1e1e1e;
     --wed-font-prim: 'Chetta', sans-serif;
     --wed-font-sec: 'Creato', serif;
   }  
