--- a/style.css
+++ b/style.css
@@ -24,8 +24,8 @@
     --wed-prim: white;
     --wed-sec: #ffe9ce;
     --wed-tri: #fff2e2;
-    --wed-fontcl1: #252525;
-    --wed-fontcl2: #1e1e1e;
+    --wed-fontcl1: #252525;;
+    --wed-fontcl2: #1e1e1e;;
     --wed-font-prim: 'Chetta', sans-serif;
     --wed-font-sec: 'Creato', serif;
   }  
@@ -50,45 +50,47 @@ body {
 
     .outerContainer {
 display:flex;
-flex-direction:row;
+align-items:center;
+flex-direction:column;
 filter: drop-shadow(0px 0px 1.5rem rgb(0,0,0,0.10));
     }
 
     .columnColumn {
         position:relative;
-        width:6.25rem;
+        width: auto;
         height:100%;
         display:flex;
-        flex-direction:column;
+        flex-direction:row;
         justify-content: center;
-        align-items:flex-start;
+        align-self: flex-start;
+        transform:translateY(0.4rem);
     }
 
     .columnCard {
         background:var(--wed-prim);
         height:4rem;
         width:4rem;
-        margin-top:0.3rem;
-        margin-bottom:0.3rem;
-        transform:translateX(-0.05rem) scale(0.95);
+        margin-right:0.2rem;
+        transform:scale(0.95);
         display:flex;
         justify-content:center;
         align-items:center;
         font-size: 2rem;
         z-index:10;
         transition: box-shadow 250ms ease-in-out, transform 250ms ease-in-out;
-        box-shadow: 0.45rem 0rem 0.75rem -0.8rem rgba(0, 0, 0, 0.7) inset;
+        box-shadow: 0rem -0.75rem 0.75rem -0.8rem rgba(0, 0, 0, 0.7) inset;
         position:relative;
     }
 
-    .columnCard:first-child {
-        margin-top:0.09rem;
-    }
+
 
       .activeCard {
         z-index:200;
         box-shadow: none;
-        transform:translateX(-0.05rem) scale(1.05);
+        transform:scale(1.05);
+      }
+      #dateCard {
+        transform-origin: left;
       }
 
 .innerContainer {
@@ -96,14 +98,14 @@ filter: drop-shadow(0px 0px 1.5rem rgb(0,0,0,0.10));
     text-align: center;
     background: var(--wed-prim);
     padding: 1rem;
-    border-radius: 1rem 0rem 1rem 1rem;
+    border-radius: 0rem 1rem 1rem 1rem;
     box-shadow: 0.1rem 0.1rem 0.25rem 0rem rgba(0, 0, 0, 0.07);
     display:flex;
     flex-direction:column;
     justify-content: center;
     align-items: center;
-    width:12rem;
-    min-width:12rem;
+    width:85vw;
+    max-width:700px;
     height:25rem;
     z-index:100;
 }
@@ -171,7 +173,7 @@ span {
 
 .toggleButton {
     box-sizing:border-box;
-    margin:0.8rem;
+    margin:0.5rem;
     font-size: 2.3rem;
     background: var(--wed-prim);
     aspect-ratio: 1 / 1; 
@@ -214,3 +216,57 @@ padding:0.4rem 0.2rem 0.4rem 0.2rem;
 box-shadow: 0.05rem 0.05rem 0.1rem 0rem rgba(0, 0, 0, 0.2);
 }
 
+
+
+.ondebox {
+    position:absolute;
+    width:100vw;
+}
+
+
+.onde {
+    position:relative;
+    width: 100%;
+    height:15vh;
+    margin-bottom:-7px; /*Fix for safari gap*/
+    min-height:100px;
+    max-height:150px;
+  }
+  
+  
+  /* Animation */
+  
+  .parallaxonde > use {
+    animation: move-forever 25s cubic-bezier(.55,.5,.45,.5)     infinite;
+  }
+  .parallaxonde > use:nth-child(1) {
+    animation-delay: -2s;
+    animation-duration: 7s;
+  }
+  .parallaxonde > use:nth-child(2) {
+    animation-delay: -3s;
+    animation-duration: 10s;
+  }
+  .parallaxonde > use:nth-child(3) {
+    animation-delay: -4s;
+    animation-duration: 13s;
+  }
+  .parallaxonde > use:nth-child(4) {
+    animation-delay: -5s;
+    animation-duration: 20s;
+  }
+  @keyframes move-forever {
+    0% {
+     transform: translate3d(-90px,0,0);
+    }
+    100% { 
+      transform: translate3d(85px,0,0);
+    }
+  }
+  /*Shrinking for mobile*/
+  @media (max-width: 768px) {
+    .onde {
+      height:40px;
+      min-height:40px;
+    }
+  }
