--- a/style.css
+++ b/style.css
@@ -28,6 +28,8 @@
     --wed-fontcl2: #1e1e1e;;
     --wed-font-prim: 'Chetta', sans-serif;
     --wed-font-sec: 'Creato', serif;
+    margin: 0;
+    padding: 0;
   }  
 
   
@@ -39,13 +41,19 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
+    width: 100vw;
+    max-width:100vw;
     height: 100vh;
+    max-height:100vh;
     margin: 0;
+    padding: 0;
 }
 
 .wholeContainer {
     display:flex;
    flex-direction:column;
+   justify-content: center;
+    align-items: center;
 }
 
     .outerContainer {
@@ -291,6 +299,9 @@ z-index:30;
         position:absolute;
         text-wrap:balance;
         z-index:10;
+        display: flex;
+            justify-content: center;
+            align-items: center;
       }
 
       .appearingText {
