--- a/style.css
+++ b/style.css
@@ -159,6 +159,14 @@ font-size:2.5rem;
     text-wrap: balance;
 }
 
+.korLang .subTitleFont {
+    font-size: 1rem;
+}
+
+.korLang .titleFont {
+    font-size: 1.5rem;
+}
+
 
 .subFont {
     color: var(--wed-fontcl1);
