--- a/style.css
+++ b/style.css
@@ -71,7 +71,6 @@ display:flex;
 align-items:center;
 flex-direction:column;
 filter: drop-shadow(0px 0px 1.5rem rgb(0,0,0,0.10));
-overflow:hidden;
     }
 
     .columnColumn {
@@ -259,6 +258,14 @@ z-index:30;
 .ondebox {
     position:absolute;
     width:100vw;
+    margin: auto;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 
