--- a/style.css
+++ b/style.css
@@ -70,7 +70,6 @@ html, body {
 display:flex;
 align-items:center;
 flex-direction:column;
-filter: drop-shadow(0px 0px 1.5rem rgb(0,0,0,0.10));
     }
 
     .columnColumn {
@@ -95,8 +94,8 @@ filter: drop-shadow(0px 0px 1.5rem rgb(0,0,0,0.10));
         align-items:center;
         font-size: 2rem;
         z-index:10;
-        transition: box-shadow 250ms ease-in-out, transform 250ms ease-in-out;
-        box-shadow: 0rem -0.75rem 0.75rem -0.8rem rgba(0, 0, 0, 0.7) inset;
+        transition: box-shadow 1050ms ease-in-out, transform 100ms ease-in-out;
+        box-shadow: 0rem -0.75rem 0.75rem -0.8rem rgba(0, 0, 0, 0.7) inset, 0px 8px 24px rgba(149, 157, 165, 0.2);
         position:relative;
     }
 
@@ -106,6 +105,7 @@ filter: drop-shadow(0px 0px 1.5rem rgb(0,0,0,0.10));
         z-index:200;
         box-shadow: none;
         transform:scale(1.05);
+        box-shadow: 0px 8px 24px rgba(149, 157, 165, 0.2);
       }
       #dateCard {
         transform-origin: left;
@@ -117,7 +117,7 @@ filter: drop-shadow(0px 0px 1.5rem rgb(0,0,0,0.10));
     background: var(--wed-prim);
     padding: 1rem;
     border-radius: 0rem 1rem 1rem 1rem;
-    box-shadow: 0.1rem 0.1rem 0.25rem 0rem rgba(0, 0, 0, 0.07);
+    box-shadow: 0.1rem 0.3rem 0.25rem 0rem rgba(0, 0, 0, 0.07),  rgba(100, 100, 111, 0.2) 0px 13px 23px 0px;
     display:flex;
     flex-direction:column;
     justify-content: center;
@@ -219,7 +219,7 @@ span {
     align-items:center;
     box-shadow: 0.2rem 0.1rem 0.3rem 0rem rgba(0, 0, 0, 0.3);
     transform:scale(0.95);
-    transition: background-color 150ms ease-in-out, transform 150ms ease-in-out;
+    transition: background-color 100ms ease-in-out, transform 100ms ease-in-out;
 }
 
 .activeButton {
