--- a/style.css
+++ b/style.css
@@ -126,6 +126,7 @@ flex-direction:column;
     max-width:700px;
     height:25rem;
     z-index:100;
+    position:relative;
 }
 
 .titleFont {
@@ -229,8 +230,10 @@ span {
 
 
 .respondContainer {
+    width:100%;
         justify-content: center;
         display:none;
+        width:100%
 }
 
 .dateContainer .respondContainer {
