--- a/style.css
+++ b/style.css
@@ -81,6 +81,8 @@ flex-direction:column;
         justify-content: center;
         align-self: flex-start;
         transform:translateY(0.4rem);
+        width: 80vw;
+        max-width: 700px;
     }
 
     .columnCard {
