--- a/style.css
+++ b/style.css
@@ -172,6 +172,11 @@ font-size:2.5rem;
     text-wrap: balance;
 }
 
+.korLang.dateContainer .subFont {
+    font-size: 1.4rem;
+}
+
+
 .korLang .subTitleFont {
     font-size: 1rem;
 }
