--- a/style.css
+++ b/style.css
@@ -78,7 +78,7 @@ flex-direction:column;
         height:100%;
         display:flex;
         flex-direction:row;
-        justify-content: center;
+        justify-content: flex-start;
         align-self: flex-start;
         transform:translateY(0.4rem);
         width: 80vw;
